--- a/stylesheets/redtea.ui.css
+++ b/stylesheets/redtea.ui.css
@@ -33,11 +33,11 @@
 .ui.veriField {
   display: inline-block;
   height: 39px;
-  color: white;
+  color: #fff;
   font-size: 14px;
-  text-shadow: white 0 0 3px;
+  text-shadow: #fff 0 0 3px;
   background-color: rgba(0, 221, 255, 0.4);
-  box-shadow: 0 0 1px 1px black;
+  box-shadow: 0 0 1px 1px #000;
   border: 0; }
 
 .ui.slideCounter {
